# yinsh

./: .clang-format  CMakeLists.txt  README.md  benchmarks.cpp  board.cpp  board.h  boardTest.cpp  game1.txt  game2.txt  game3.txt  game4.txt  gameState.cpp  gameState.h  gameStateTest.cpp  main.cpp  minMaxTest.cpp  min_max.cpp  min_max.h  test.cpp
